--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -557,3 +557,87 @@ doi = {10.1080/00220670209598786}
   biburl       = {https://dblp.org/rec/journals/corr/abs-2106-13422.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{szabo1996smart,
+  title={Smart Contracts: Building Blocks for Digital Markets},
+  author={Szabo, Nick},
+  journal={Extropy},
+  year={1996},
+  url={https://www.fon.hum.uva.nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo.best.vwh.net/smart_contracts_2.html}
+}
+
+@article{Szabo_1997, title={Formalizing and Securing Relationships on Public Networks}, volume={2}, url={https://firstmonday.org/ojs/index.php/fm/article/view/548}, DOI={10.5210/fm.v2i9.548}, abstractNote={Smart contracts combine protocols with user interfaces to formalize and secure relationships over computer networks. Objectives and principles for the design of these systems are derived from legal principles, economic theory, and theories of reliable and secure protocols. Similarities and differences between smart contracts and traditional business procedures based on written contracts, controls, and static forms are discussed. By using cryptographic and other security mechanisms, we can secure many algorithmically specifiable relationships from breach by principals, and from eavesdropping or malicious interference by third parties, up to considerations of time, user interface, and completeness of the algorithmic specification. This article discusses protocols with application in important contracting areas, including credit, content rights management, payment systems, and contracts with bearer.}, number={9}, journal={First Monday}, author={Szabo, Nick}, year={1997}, month={Sep.} }
+
+@article{Bitcoin,
+  abstract = {A purely peer-to-peer version of electronic cash would allow online payments to be sent directly from one party to another without going through a financial institution. Digital signatures provide part of the solution, but the main benefits are lost if a trusted third party is still required to prevent double-spending. We propose a solution to the double-spending problem using a peer-to-peer network. The network timestamps transactions by hashing them into an ongoing chain of hash-based proof-of-work, forming a record that cannot be changed without redoing the proof-of-work. The longest chain not only serves as proof of the sequence of events witnessed, but proof that it came from the largest pool of CPU power. As long as a majority of CPU power is controlled by nodes that are not cooperating to attack the network, they'll generate the longest chain and outpace attackers. The network itself requires minimal structure. Messages are broadcast on a best effort basis, and nodes can leave and rejoin the network at will, accepting the longest proof-of-work chain as proof of what happened while they were gone.},
+  added-at = {2022-06-15T13:43:05.000+0200},
+  author = {Nakamoto, Satoshi},
+  biburl = {https://www.bibsonomy.org/bibtex/2974d35fdb27dea57296ed2245556aa18/daniel_grm9},
+  interhash = {423c2cdff70ba0cd0bca55ebb164d770},
+  intrahash = {974d35fdb27dea57296ed2245556aa18},
+  keywords = {itsecseminar},
+  month = may,
+  timestamp = {2022-06-15T13:43:05.000+0200},
+  title = {Bitcoin: A Peer-to-Peer Electronic Cash System},
+  url = {http://www.bitcoin.org/bitcoin.pdf},
+  year = 2009
+}
+
+@inproceedings{Blockchain,
+author = {Zheng, Zibin and Xie, Shaoan and Dai, Hong-Ning and Chen, Xiangping and Wang, Huaimin},
+year = {2017},
+month = {06},
+pages = {},
+title = {An Overview of Blockchain Technology: Architecture, Consensus, and Future Trends},
+doi = {10.1109/BigDataCongress.2017.85}
+}
+
+@misc{Tassonomia,
+  author = {Vitalik Buterin},
+  title = {On Public and Private Blockchains},
+  year = {2015},
+  howpublished = {\url{https://blog.ethereum.org/2015/08/07/on-public-and-private-blockchains}},
+}
+
+@inproceedings{Peercoin,
+author = {Zhao, Wenbing and Yang, Shunkun and Luo, Xiong and Zhou, Jiong},
+title = {On PeerCoin Proof of Stake for Blockchain Consensus},
+year = {2021},
+isbn = {9781450389624},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3460537.3460547},
+doi = {10.1145/3460537.3460547},
+abstract = {Proof of Stake (PoS) has been talked about extensively as an alternative way of reaching consensus in blockchain systems. However, there are few publications on how PoS can be used to create new blocks in detail. The undisputed lead proponent for PoS is Ethereum. However, virtually all discussions regarding PoS for Ethereum are centered on selecting a block using PoS after one or more candidate blocks have already been somehow created. PeerCoin was the first blockchain system that incorporated PoS in block creation. Unfortunately, there is no known documentation on how PoS works in PeerCoin. In this paper, we fill this gap by presenting a detailed explanation of the PeerCoin PoS algorithm based on PeerCoin source code. We also dispel the misconception that PeerCoin PoS is based on Proof of Work (PoW) and hence would consume a lot of energy just like proof of work (PoW). In fact, it resembles PoW only on surface and differs from PoW substantially in terms of how to meet the difficulty target.},
+booktitle = {Proceedings of the 2021 3rd International Conference on Blockchain Technology},
+pages = {129–134},
+numpages = {6},
+keywords = {Blockchain, PeerCoin, coin age, distributed consensus, proof of stake, proof of work, unspent transaction output (UTXO)},
+location = {, Shanghai, China, },
+series = {ICBCT '21}
+}
+
+@article{Blackcoin,
+  title={Blackcoin’s proof-of-stake protocol v2},
+  author={Vasin, Pavel},
+  journal={URL: https://blackcoin. co/blackcoin-pos-protocol-v2-whitepaper. pdf},
+  volume={71},
+  year={2014}
+}
+
+@article{Ethereum,
+     title={Ethereum: A secure decentralised generalised transaction ledger},
+     author={Wood, Gavin},
+     edition={EIP-150 REVISION}
+}
+
+@article{SCReview,
+author = {Taherdoost, Hamed},
+year = {2023},
+month = {02},
+pages = {117},
+title = {Smart Contracts in Blockchain Technology: A Critical Review},
+volume = {14},
+journal = {Information},
+doi = {10.3390/info14020117}
+}
