--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -15,15 +15,36 @@ title = {Slither Audited Smart Contracts Dataset},
 author={Martina Rossini},
 year={2022}
 }
+@misc{Vulnerabilities,
+  author       = {Kaden Zipfel},
+  howpublished =  {\url{https://github.com/kadenzipfel/smart-contract-vulnerabilities?tab=readme-ov-file
+  }},
+  title        = { Smart Contract Vulnerabilities
 
+  },
+  year         = {2023}
+}
 @misc{reentrancy-historical,
   author       = {pcaversaccio},
-  howpublished = {https://github.com/pcaversaccio/reentrancy-attacks},
+  howpublished =  {\url{https://github.com/pcaversaccio/reentrancy-attacks}},
   title        = { A Historical Collection of Reentrancy Attacks
   },
   year         = {2023}
 }
-
+@inproceedings{Zeus,
+  title={ZEUS: Analyzing Safety of Smart Contracts},
+  author={Sukrit Kalra and Seep Goel and Mohan Dhawan and Subodh Sharma},
+  booktitle={Network and Distributed System Security Symposium},
+  year={2018},
+  url={https://api.semanticscholar.org/CorpusID:3481056}
+}
+@misc{DAO,
+  author       = {Phil Daian},
+  howpublished = {\url{https://hackingdistributed.com/2016/06/18/analysis-of-the-dao-exploit/}},
+  title        = { Analysis of the DAO exploit
+  },
+  year         = {June 18, 2016}
+}
 @INPROCEEDINGS{sc-vulnerabilities,
   author={Khan, Zulfiqar Ali and Siami Namin, Akbar},
   booktitle={2020 IEEE International Conference on Big Data (Big Data)}, 
@@ -640,4 +661,50 @@ title = {Smart Contracts in Blockchain Technology: A Critical Review},
 volume = {14},
 journal = {Information},
 doi = {10.3390/info14020117}
+}
+
+@article{SCEnhancement,
+author = {Wang, Yajing and He, Jingsha and Zhu, Nafei and Yi, Yuzi and Zhang, Qingqing and Song, Hongyu and Xue, Ruixin},
+year = {2021},
+month = {12},
+pages = {},
+title = {Security enhancement technologies for smart contracts in the blockchain: A survey},
+volume = {32},
+journal = {Transactions on Emerging Telecommunications Technologies},
+doi = {10.1002/ett.4341}
+}
+
+@inproceedings{SurveySC,
+author = {Salzer, Gernot and Di Angelo, Monika},
+year = {2019},
+month = {04},
+pages = {},
+title = {A Survey of Tools for Analyzing Ethereum Smart Contracts},
+doi = {10.1109/DAPPCON.2019.00018}
+}
+
+@unknown{careSC,
+author = {Perez, Daniel and Livshits, Benjamin},
+year = {2019},
+month = {02},
+pages = {},
+title = {Smart Contract Vulnerabilities: Does Anyone Care?}
+}
+
+@article{Suicidal,
+  author       = {Ivica Nikolic and
+                  Aashish Kolluri and
+                  Ilya Sergey and
+                  Prateek Saxena and
+                  Aquinas Hobor},
+  title        = {Finding The Greedy, Prodigal, and Suicidal Contracts at Scale},
+  journal      = {CoRR},
+  volume       = {abs/1802.06038},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1802.06038},
+  eprinttype    = {arXiv},
+  eprint       = {1802.06038},
+  timestamp    = {Tue, 17 Sep 2019 14:15:19 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1802-06038.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
