--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -53,11 +53,11 @@
     \end{center}
     \vspace{15mm}
     \begin{center}
-    {\LARGE{\bf Machine Learning}}\\
+    {\LARGE{\bf Utilizzo dei Transformers}}\\
     \vspace{3mm}
-    {\LARGE{\bf Vulneralibities Detection in SmartContracts }}\\
+    {\LARGE{\bf per la classificazione delle }}\\
     \vspace{3mm}
-    {\LARGE{\bf ..... }}\\
+    {\LARGE{\bf  vulnerabilità negli Smart Contracts }}\\
     \end{center}
     \vspace{40mm}
     \par
