ended results chapter

--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -101,4 +101,6 @@
 \bibliographystyle{plain}
 \bibliography{Bibliography.bib}
 \nocite{*}
+
+\subfile{Chapters/Appendix/Appendix.tex}
 \end{document}
