added confusion matrices

--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -708,3 +708,42 @@ title = {Smart Contract Vulnerabilities: Does Anyone Care?}
   biburl       = {https://dblp.org/rec/journals/corr/abs-1802-06038.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+@article{BigBird,
+author       = {Manzil Zaheer and
+                Guru Guruganesh and
+                Avinava Dubey and
+                Joshua Ainslie and
+                Chris Alberti and
+                Santiago Onta{\~{n}}{\'{o}}n and
+                Philip Pham and
+                Anirudh Ravula and
+                Qifan Wang and
+                Li Yang and
+                Amr Ahmed},
+title        = {Big Bird: Transformers for Longer Sequences},
+journal      = {CoRR},
+volume       = {abs/2007.14062},
+year         = {2020},
+url          = {https://arxiv.org/abs/2007.14062},
+eprinttype    = {arXiv},
+eprint       = {2007.14062},
+timestamp    = {Mon, 16 Oct 2023 13:50:56 +0200},
+biburl       = {https://dblp.org/rec/journals/corr/abs-2007-14062.bib},
+bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Longformer,
+  author       = {Iz Beltagy and
+                  Matthew E. Peters and
+                  Arman Cohan},
+  title        = {Longformer: The Long-Document Transformer},
+  journal      = {CoRR},
+  volume       = {abs/2004.05150},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2004.05150},
+  eprinttype    = {arXiv},
+  eprint       = {2004.05150},
+  timestamp    = {Tue, 14 Apr 2020 16:40:34 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2004-05150.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
