--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -53,11 +53,11 @@
     \end{center}
     \vspace{15mm}
     \begin{center}
-    {\LARGE{\bf Utilizzo dei Transformers}}\\
+    {\LARGE{\bf Utilizzo di modelli basati sui }}\\
     \vspace{3mm}
-    {\LARGE{\bf per la classificazione delle }}\\
+    {\LARGE{\bf Transformers per la classificazione delle }}\\
     \vspace{3mm}
-    {\LARGE{\bf  vulnerabilità negli Smart Contracts }}\\
+    {\LARGE{\bf  vulnerabilità negli Smart Contracts Ethereum}}\\
     \end{center}
     \vspace{40mm}
     \par
