--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -419,8 +419,15 @@ DOI = {10.3390/s23167246}
   biburl       = {https://dblp.org/rec/journals/corr/WuSCLNMKCGMKSJL16.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
-
-@article{DistillBERT,
+@misc{hinton2015distilling,
+      title={Distilling the Knowledge in a Neural Network}, 
+      author={Geoffrey Hinton and Oriol Vinyals and Jeff Dean},
+      year={2015},
+      eprint={1503.02531},
+      archivePrefix={arXiv},
+      primaryClass={id='stat.ML' full_name='Machine Learning' is_active=True alt_name=None in_archive='stat' is_general=False description='Covers machine learning papers (supervised, unsupervised, semi-supervised learning, graphical models, reinforcement learning, bandits, high dimensional inference, etc.) with a statistical or theoretical grounding'}
+}
+@article{DistilBERT,
   author       = {Victor Sanh and
                   Lysandre Debut and
                   Julien Chaumond and
@@ -746,4 +753,24 @@ bibsource    = {dblp computer science bibliography, https://dblp.org}
   timestamp    = {Tue, 14 Apr 2020 16:40:34 +0200},
   biburl       = {https://dblp.org/rec/journals/corr/abs-2004-05150.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{DataAct,
+author = {European Commission},
+title   = {REGULATION OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL
+on harmonised rules on fair access to and use of data
+(Data Act)},
+year = {2022},
+howpublished = {\url{https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=COM%3A2022%3A68%3AFIN}}
+}
+
+article{CodeBERTPaper,
+author = {Tang, Xueyan and Du, Yuying and Lai, Alan and Zhang, Ze and Shi, Lingzhi},
+year = {2023},
+month = {11},
+pages = {},
+title = {Deep learning-based solution for smart contract vulnerabilities detection},
+volume = {13},
+journal = {Scientific Reports},
+doi = {10.1038/s41598-023-47219-0}
 }
