--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -646,14 +646,14 @@ series = {ICBCT '21}
 }
 
 @article{Blackcoin,
-  title={Blackcoin’s proof-of-stake protocol v2},
+  title={Blackcoin's proof-of-stake protocol v2},
   author={Vasin, Pavel},
   journal={URL: https://blackcoin. co/blackcoin-pos-protocol-v2-whitepaper. pdf},
   volume={71},
   year={2014}
 }
 
-@article{Ethereum,
+@misc{Ethereum,
      title={Ethereum: A secure decentralised generalised transaction ledger},
      author={Wood, Gavin},
      edition={EIP-150 REVISION}
@@ -768,9 +768,26 @@ article{CodeBERTPaper,
 author = {Tang, Xueyan and Du, Yuying and Lai, Alan and Zhang, Ze and Shi, Lingzhi},
 year = {2023},
 month = {11},
-pages = {},
 title = {Deep learning-based solution for smart contract vulnerabilities detection},
 volume = {13},
 journal = {Scientific Reports},
 doi = {10.1038/s41598-023-47219-0}
+}
+
+@misc{BertImage,
+  author          = {Sushant Kumar},
+ 
+  title           = {BERT: Bidirectional Encoder Representations from Transformers
+  },
+  year            = {2024}
+}
+@article{DistilbertImage,
+author = {Adel, Hadeer and Dahou, Abdelghani and Mabrouk, Alhassan and Elsayed Abd Elaziz, Mohamed and Kayed, Mohammed and El-henawy, Ibrahim and Alshathri, Samah and Ali, Abdelmgeid},
+year = {2022},
+month = {01},
+pages = {447},
+title = {Improving Crisis Events Detection Using DistilBERT with Hunger Games Search Algorithm},
+volume = {10},
+journal = {Mathematics},
+doi = {10.3390/math10030447}
 }
