--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -57,7 +57,9 @@
     \vspace{3mm}
     {\LARGE{\bf Transformers per la classificazione delle }}\\
     \vspace{3mm}
-    {\LARGE{\bf  vulnerabilità negli Smart Contracts Ethereum}}\\
+    {\LARGE{\bf vulnerabilità negli Smart Contracts}}\\
+    \vspace{3mm}
+    {\LARGE{\bf Ethereum}}\\
     \end{center}
     \vspace{40mm}
     \par
@@ -66,8 +68,7 @@
     {\large{\bf Relatore:\\
     Chiar.mo Prof.\\
     Stefano Ferretti\\
-    \\
-    Correlatore:\\
+
     }}
     \end{minipage}
     \hfill
