--- a/thesis/Bibliography.bib
+++ b/thesis/Bibliography.bib
@@ -764,7 +764,7 @@ year = {2022},
 howpublished = {\url{https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=COM%3A2022%3A68%3AFIN}}
 }
 
-article{CodeBERTPaper,
+@article{CodeBERTPaper,
 author = {Tang, Xueyan and Du, Yuying and Lai, Alan and Zhang, Ze and Shi, Lingzhi},
 year = {2023},
 month = {11},
@@ -790,4 +790,14 @@ title = {Improving Crisis Events Detection Using DistilBERT with Hunger Games Se
 volume = {10},
 journal = {Mathematics},
 doi = {10.3390/math10030447}
+}
+
+@article{Taylor1953,
+  title={“Cloze Procedure”: A New Tool for Measuring Readability},
+  author={Wilson L. Taylor},
+  journal={Journalism \& Mass Communication Quarterly},
+  year={1953},
+  volume={30},
+  pages={415 - 433},
+  url={https://api.semanticscholar.org/CorpusID:206666846}
 }
