--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -1,9 +1,11 @@
 \documentclass[12pt,a4paper]{report}
 \usepackage[italian]{babel}
+\usepackage[utf8]{inputenc}
 \usepackage{newlfont,wrapfig}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{amsfonts}
 \usepackage{xcolor}
 \usepackage{subfiles}
 \usepackage{listings}
@@ -57,7 +59,7 @@
     \vspace{3mm}
     {\LARGE{\bf Transformers per la classificazione delle }}\\
     \vspace{3mm}
-    {\LARGE{\bf vulnerabilità negli Smart Contracts}}\\
+    {\LARGE{\bf vulnerabilit\`a negli Smart Contracts}}\\
     \vspace{3mm}
     {\LARGE{\bf Ethereum}}\\
     \end{center}
@@ -84,7 +86,8 @@
     \end{titlepage}
 
     \begin{dedication}
-       ...
+       A nonna Emanuela e nonna Francesca,\\
+       ho finito le ``scuole grandi''.
     \end{dedication}
     \tableofcontents
     \listoffigures
