--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -86,8 +86,7 @@
     \end{titlepage}
 
     \begin{dedication}
-       A nonna Emanuela e nonna Francesca,\\
-       ho finito le ``scuole grandi''.
+       A nonna Emanuela e nonna Francesca
     \end{dedication}
     \tableofcontents
     \listoffigures
@@ -107,4 +106,6 @@
 \nocite{*}
 
 \subfile{Chapters/Appendix/Appendix.tex}
+
+
 \end{document}
