--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -107,5 +107,21 @@
 
 \subfile{Chapters/Appendix/Appendix.tex}
 
+\chapter*{Ringraziamenti} 
+Un sentito ringraziamento va al Prof. Stefano Ferretti, relatore di questa tesi, per la sua costante disponibilit\`a e per i preziosi consigli che mi ha fornito durante tutto il percorso di stesura di questo lavoro. 
+
+Mamma e pap\`a, vi ringrazio per non aver mai smesso di credere in me. La vostra fiducia ed il vostro incoraggiamento mi hanno sostenuto nei momenti difficili, ma soprattutto vi ringrazio  per non aver mai interferito nelle mie scelte, permettendomi di crescere e di diventare la persona che sono oggi.
+
+Ringrazio mia sorella Emili, per aver sopportato con pazienza tutti i fastidi che le ho causato (e le causo!) e per aver sempre avuto una parola di conforto nei momenti di difficolt\`a.
+
+Ringrazio Atena, per essere sempre stata al mio fianco, per capirmi, incoraggiarmi e per aver compreso tutti i ``no" che le ho detto, soprattutto in questa fase finale del lavoro. 
+
+Un ringraziamento  va a Leo, per le nostre passeggiate e le nostre discussioni, che spesso mi hanno offerto nuovi spunti e illuminato con i suoi saggi consigli. 
+
+Ringrazio Mario, per aver condiviso con me il suo punto di vista sull'argomento e per essere rimasto un caro amico nonostante la mia assenza per mesi. 
+
+Infine, desidero ringraziare Luca e Simone. Tra tutte le pagine e le righe scritte in questa tesi, sicuramente queste sono state le pi\`u complesse. Chi pi\`u di voi \`e stato importante in questo percorso? Abbiamo condiviso ogni cosa, da un caff\`e ad un pasto, da una risata a una lacrima, dagli appunti ai progetti. Per cinque lunghi anni, siete stati la mia famiglia bolognese. Se il detto dice che la famiglia non si sceglie, io non potevo chiedere di meglio. A voi, il mio pi\`u sincero grazie e l'augurio di non perderci mai, per quanto la vita e le nostre scelte ci possano allontanare.
+
+A tutti voi, il mio pi\`u sincero grazie. Senza di voi, nulla sarebbe stato possibile.
 
 \end{document}
